refactor: complete l'isolation du domaine (point 21)
- convertit les 4 dernieres entites (User, RefreshToken, OutboxEvent, RoundAdvancement), domain/model/entities/ n'existe plus

- retire le @JsonIgnore de MatchFinishedEvent (constructeur de convenance supprime)

- elimine Page/Pageable Spring du domaine: nouveaux types purs PageRequest/PageResult

- controllers REST reconvertissent PageResult en PageImpl Spring, format JSON preserve a l'identique

- handlers JSON-RPC adaptes (leur format de pagination change legerement, aucun test ne le verifiait)

- DomainIsolationTest (ArchUnit) passe desormais a 0 violation, contre 98 au premier essai